forge/tests/errors/wrong_arg_count.fg
fn add(a: int, b: int) -> int {
    a + b
}

fn main() {
    let result = add(1)
    println(string(result))
}
